# news-app

./: .cursorindexingignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/components/: CyberpunkLoaders.tsx  HomeClient.tsx  MatrixRain.tsx  NewsCard.tsx  SearchBar.tsx
backend/: README.md  fetch_news.py  pyproject.toml  seed_test_data.py  test.db
backend/app/: main.py
backend/app/api/routes/: news.py
backend/app/core/: config.py  database.py
backend/app/models/: news.py
backend/app/schemas/: news.py
backend/app/services/: news_fetcher.py  scheduler.py
backend/tests/: conftest.py  test_integration.py  test_integration_postgres.py  test_news_api.py  test_news_fetcher.py
lib/: api.ts  constants.ts  registry.tsx  styles.tsx  types.ts  utils.ts
public/data/: academic.json  meta.json  news.json  summary.json
tests/: e2e_test.md
